refactored UI & toggle state

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
     <div class="container">
-
         <div class="card-holder">
             <div class="card-top">
                 <div class="top-one">
@@ -24,33 +23,33 @@
                 </div>
 
                 <div class="top-two">
-                    <span class="initial-figures">
-                        <span id="big-figure">12%</span>
+                    <span>
+                        <span class="twelve">12%</span>
+                        <span class="sixty">60%</span>
                         <span>
-                            <i class="fas fa-sort-down icon"></i>
-                            <i id="small-figure">14%</i>
+                            <i class="fas fa-sort-down"></i>
+                            <span class="fourteen">14%</span>
+                            <i class="fas fa-sort-up"></i>
+                            <span class="eight">8%</span>
                         </span>
                     </span>
-
-                    <!-- <span class="compact-figures">
-                        <span>60%</span>
-                        <span><i class="fas fa-sort-up"></i> 8%</span>
-                    </span> -->
-
-                    <span>
-                        <input type="range" name="" id="" min="0" max="100" value="50">
+                    <span class="range">
+                        <div class="range-bar">
+                            <div class="range-tracker"></div>
+                            <div class="range-thumb"></div>
+                        </div>
                     </span>
                 </div>
 
                 <div class="top-three">
                     <i class="fas fa-info-circle"></i>&nbsp; <span>Source</span><span id="nibbs">NIBBS</span>
                 </div>
+            </div>
 
-                <div class="line">
-                    <div class="compact-slider">
-                        <div></div>
-                        <div></div>
-                    </div>
+            <div class="line">
+                <div class="compact-slider">
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
 
@@ -60,10 +59,9 @@
                 <span class="btn">Yearly</span>
             </div>
         </div>
-
     </div>
 
-    <script src="JS/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
