--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
                             <span class="eight">8%</span>
                         </span>
                     </span>
-                    <span class="range">
-                        <div class="range-bar">
-                            <div class="range-tracker"></div>
-                            <div class="range-thumb"></div>
-                        </div>
+                    <span class="range-container">
+                        <input type="range" name="" id="ranger" class="slider" min="0" max="100" value="50">
                     </span>
                 </div>
 
